# AFC

./: AFCS.ipynb  README.md  compare_forecasts.ipynb  evaluate_tbats.ipynb  model_arima.ipynb  model_prophet.ipynb  model_tbats.ipynb  pyproject.toml  submission.csv  utils.py
backups/: BackupCopy of AFCS.ipynb  model_prophet.py
fits_pickles/: tbats_fit.pkl
forecast_pickles/: autoarima_forecast.pkl  prophet_20231221143051.pkl  prophet_20231221143618.pkl  prophet_forecast.pkl  tbats_forecast.pkl
