[tool.poetry]
name = "afc"
version = "0.1.0"
description = ""
authors = ["Julius <j.b.huizign@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
prophet = "^1.1.5"
ipykernel = "^6.27.1"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
